gpu machine updates

--- a/bert-edh-pair-prediction/edh-pair-prediction.ipynb
+++ b/bert-edh-pair-prediction/edh-pair-prediction.ipynb
@@ -22,6 +22,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !pip install datasets transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import csv\n",
     "import itertools\n",
     "import os\n",
@@ -36,10 +45,8 @@
     "from tqdm.notebook import tqdm\n",
     "from transformers import (BertTokenizerFast,\n",
     "                          BertForNextSentencePrediction,\n",
-    "                          Trainer, TrainingArguments, )\n",
-    "\n",
-    "import mtg.cards\n",
-    "import mtg.extract.edhrec"
+    "                          DataCollatorWithPadding,\n",
+    "                          Trainer, TrainingArguments, )"
    ]
   },
   {
@@ -68,10 +75,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "import mtg.cards\n",
+    "import mtg.extract.edhrec"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "edhrec_cards = (mtg.extract.edhrec.get_commanders_and_cards()\n",
     "                [['name', 'commander']])\n",
@@ -79,20 +92,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# most common cards\n",
     "edhrec_cards.name.value_counts().plot.hist()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# most common cards\n",
     "vc = edhrec_cards.name.value_counts()\n",
@@ -100,10 +109,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# most cards appear in only 1 commander recs, up to 500 cards appear\n",
     "# in 10 commander recs\n",
@@ -118,10 +125,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "z = edhrec_cards.commander.value_counts()\n",
     "f\"{int((z * (z - 1) / 2).sum()):,}\""
@@ -146,10 +151,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "cards = (mtg.cards.cards_df()\n",
     "         .sort_values(by=['name', 'multiverseId'], ascending=False)\n",
@@ -158,10 +161,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# before groupby().last(): 56_002, 78\n",
     "# after: 21_814, 77\n",
@@ -169,10 +170,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "all_cards = set(cards.index.values)"
    ]
@@ -196,10 +195,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "cards_train, cards_test_val = train_test_split(cards.index.values, test_size=.1, random_state=1337)\n",
     "cards_test, cards_val = train_test_split(cards_test_val, test_size=.5, random_state=1337)\n",
@@ -219,10 +216,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "cmc_map = {0.0: 'zero',\n",
     "           0.5: 'one half',\n",
@@ -253,20 +248,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "assert parse_mana_colors_from_cost('{2}{U}{U}{B}') == 'blue, black'\n",
     "assert parse_mana_colors_from_cost('{8}{W}{W}') == 'white'"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def get_card_text(card):\n",
     "    mana_color_str = parse_mana_colors_from_cost(card.manaCost)\n",
@@ -281,10 +272,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "name = cards_train[4]\n",
     "cards.loc[name]\n",
@@ -292,10 +281,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "card_text = pd.DataFrame({'text': cards.apply(get_card_text, axis=1)})\n",
     "card_text.head(20)"
@@ -327,24 +314,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# class Edhrec(datasets.GeneratorBasedBuilder):\n",
-    "#     raise NotImplementedError(\"havent written builder configs\")\n",
-    "#     BUILDER_CONFIGS = []\n",
+    "class Edhrec(datasets.GeneratorBasedBuilder):\n",
+    "    raise NotImplementedError(\"havent written builder configs\")\n",
+    "    BUILDER_CONFIGS = []\n",
     "    \n",
-    "#     def _info(self):\n",
-    "#         return datasets.DatasetInfo(\n",
-    "#             description=\"lol no thanks\",\n",
-    "#             features=datasets.Features({\"id\": datasets.Value('string'),\n",
-    "#                                         \"text_a\": datasets.Value('string'),\n",
-    "#                                         \"text_b\": datasets.Value('string'),\n",
-    "#                                         \"label\": datasets.Value(\"int32\"), }),\n",
-    "#             supervised_keys=None\n",
-    "#         )"
+    "    def _info(self):\n",
+    "        return datasets.DatasetInfo(\n",
+    "            description=\"lol no thanks\",\n",
+    "            features=datasets.Features({\"id\": datasets.Value('string'),\n",
+    "                                        \"text_a\": datasets.Value('string'),\n",
+    "                                        \"text_b\": datasets.Value('string'),\n",
+    "                                        \"label\": datasets.Value(\"int32\"), }),\n",
+    "            supervised_keys=None\n",
+    "        )"
    ]
   },
   {
@@ -479,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "F_DS_CACHE = os.path.join('.', 'data', 'edhrec_cache_dataset')"
+    "# F_DS_CACHE = os.path.join('.', 'data', 'edhrec_cache_dataset')"
    ]
   },
   {
@@ -488,26 +473,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MAX_LENGTH = 300\n",
+    "MAX_LENGTH = 300\n",
     "\n",
-    "# tokenizer = BertTokenizerFast.from_pretrained('bert-base-uncased')\n",
+    "tokenizer = BertTokenizerFast.from_pretrained('bert-base-uncased')\n",
     "\n",
-    "# def tokenizer_map_func(rec):\n",
-    "#     return tokenizer(rec['text_a'], rec['text_b'],\n",
-    "#                      return_tensors='np',\n",
-    "#                      padding='max_length',\n",
-    "#                      max_length=MAX_LENGTH,\n",
-    "#                      truncation=True)\n",
+    "def tokenizer_map_func(rec):\n",
+    "    return tokenizer(rec['text_a'], rec['text_b'],\n",
+    "                     padding='max_length',\n",
+    "                     max_length=MAX_LENGTH,\n",
+    "                     truncation=True)\n",
     "\n",
     "\n",
-    "# (load_dataset('csv',\n",
-    "#               data_files={split_type: glob(os.path.join('.', 'data', split_type, '*.csv'))\n",
-    "#                           for split_type in ['val', 'test', 'train']},\n",
-    "#               quoting=csv.QUOTE_ALL)\n",
-    "#  .shuffle()\n",
-    "#  .map(tokenizer_map_func,\n",
-    "#       batched=True)\n",
-    "#  .save_to_disk(F_DS_CACHE))"
+    "def fix_label(rec):\n",
+    "    return {'label_as_int': [int(_) for _ in rec['label']]}\n",
+    "\n",
+    "\n",
+    "split_types = ['val', 'test', 'train']\n",
+    "dataset = (load_dataset('csv',\n",
+    "                        data_files={split_type: glob(os.path.join('.', 'data', split_type, '*.csv'))\n",
+    "                                    for split_type in split_types},\n",
+    "                        quoting=csv.QUOTE_ALL)\n",
+    "           #.map(fix_label,\n",
+    "           #     batched=True)\n",
+    "           .shuffle(seeds={split_type: 1337\n",
+    "                           for split_type in split_types})\n",
+    "           .map(tokenizer_map_func,\n",
+    "                batched=True))"
    ]
   },
   {
@@ -516,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = load_from_disk(F_DS_CACHE)"
+    "# dataset = load_from_disk(F_DS_CACHE)"
    ]
   },
   {
@@ -534,7 +525,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataset['val'][0]"
+    "# dataset['val'][0]['label_as_int']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.shape"
    ]
   },
   {
@@ -552,32 +552,36 @@
    "source": [
     "model = BertForNextSentencePrediction.from_pretrained('bert-base-uncased')\n",
     "\n",
+    "TRAIN_BATCH = 36\n",
+    "EVAL_BATCH = 36\n",
+    "\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir='./results',          # output directory\n",
-    "    num_train_epochs=1,              # total # of training epochs\n",
-    "    per_device_train_batch_size=64,  # batch size per device during training\n",
-    "    per_device_eval_batch_size=64,   # batch size for evaluation\n",
-    "    warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
-    "    weight_decay=0.01,               # strength of weight decay\n",
-    "    logging_dir='./logs',            # directory for storing logs\n",
-    "    logging_steps=1,\n",
+    "    output_dir='./results',                   # output directory\n",
+    "    num_train_epochs=1,                       # total # of training epochs\n",
+    "    per_device_train_batch_size=TRAIN_BATCH,  # batch size per device during training\n",
+    "    per_device_eval_batch_size=EVAL_BATCH,    # batch size for evaluation\n",
+    "    warmup_steps=500,                         # number of warmup steps for learning rate scheduler\n",
+    "    weight_decay=0.01,                        # strength of weight decay\n",
+    "    logging_dir='./logs',                     # directory for storing logs\n",
     "    # my custom ones\n",
+    "    logging_steps=250,\n",
     "    overwrite_output_dir=True,\n",
     "    evaluation_strategy='steps',\n",
     "    logging_first_step=True,\n",
-    "    no_cuda=True,\n",
     "    seed=1337,\n",
     "    dataloader_drop_last=True,\n",
     "    dataloader_num_workers=30,\n",
-    "    label_names=['label'],\n",
+    "    label_names=['labels'],\n",
+    "    load_best_model_at_end=True,\n",
+    "    save_total_limit=10,\n",
     ")\n",
     "\n",
     "\n",
     "trainer = Trainer(\n",
-    "    model=model,                         # the instantiated 🤗 Transformers model to be trained\n",
-    "    args=training_args,                  # training arguments, defined above\n",
-    "    train_dataset=dataset['test'],      # training dataset\n",
-    "    eval_dataset=dataset['val'],         # evaluation dataset\n",
+    "    model=model,                              # the instantiated 🤗 Transformers model to be trained\n",
+    "    args=training_args,                       # training arguments, defined above\n",
+    "    train_dataset=dataset['train'],           # training dataset\n",
+    "    eval_dataset=dataset['val'].select(range(EVAL_BATCH * 250)),  # evaluation dataset\n",
     ")"
    ]
   },
@@ -588,6 +592,15 @@
    "outputs": [],
    "source": [
     "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.evaluate()"
    ]
   },
   {
@@ -1005,7 +1018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
