the other gpu machine updates

--- a/bert-edh-pair-prediction/edh-pair-prediction.ipynb
+++ b/bert-edh-pair-prediction/edh-pair-prediction.ipynb
@@ -581,14 +581,16 @@
     "    model=model,                              # the instantiated 🤗 Transformers model to be trained\n",
     "    args=training_args,                       # training arguments, defined above\n",
     "    train_dataset=dataset['train'],           # training dataset\n",
-    "    eval_dataset=dataset['val'].select(range(EVAL_BATCH * 250)),  # evaluation dataset\n",
+    "    eval_dataset=dataset['val'].select(range(EVAL_BATCH * 1_000)),  # evaluation dataset\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "trainer.train()"
@@ -601,6 +603,183 @@
    "outputs": [],
    "source": [
     "trainer.evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = \"edhrec-bert-base-uncased\"\n",
+    "model.save_pretrained(model_path)\n",
+    "tokenizer.save_pretrained(model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.evaluate(dataset['val'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.evaluate(dataset['test'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.predict?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "p = trainer.predict(dataset['test'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset['test']['text_a'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset['test']['text_b'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zero_max = p.predictions[:, 0].argmax()\n",
+    "p.predictions[zero_max]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset['test']['text_a'][zero_max]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset['test']['text_b'][zero_max]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one_max = p.predictions[:, 1].argmax()\n",
+    "p.predictions[one_max]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset['test']['text_a'][one_max]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset['test']['text_b'][one_max]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{k: np.array(v) for (k, v) in dataset['test'][:10].items() if k in ['attention_mask', 'input_ids', 'label', 'token_type_ids']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "(model(**{k: torch.as_tensor(np.array(v)).to(\"cuda\")\n",
+    "          for (k, v) in dataset['test'][:10].items()\n",
+    "          if k in ['attention_mask', 'input_ids', 'token_type_ids']})\n",
+    " [0]\n",
+    " .softmax(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset['test']['label'][:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "next steps\n",
+    "\n",
+    "+ what do our false positives look like\n",
+    "+ what is the separation like for \"cards that have been on edhrec\" vs. \"cards that havent\n",
+    "    + i.e. do we just predict \"both cards have been on EDHREC\"?\n",
+    "+ what is the sorted list of recommendations given an existing deck"
    ]
   },
   {
