second sampling method

--- a/bert-edh-pair-prediction/edh-pair-prediction.ipynb
+++ b/bert-edh-pair-prediction/edh-pair-prediction.ipynb
@@ -84,13 +84,14 @@
    "outputs": [],
    "source": [
     "IS_LOCAL_LAPTOP = True\n",
-    "BUILD_TTV_DATASETS = False\n",
+    "BUILD_TTV_DATASETS = True\n",
+    "USE_CARD_SAMPLER_V2 = True\n",
     "DO_FINE_TUNING = False\n",
-    "USE_FINE_TUNED_MODEL = True\n",
+    "USE_FINE_TUNED_MODEL = False\n",
     "CHECK_FINE_TUNED_MODEL_RESULTS = False\n",
     "MAKE_DECK_RECOMMENDATION_DATASETS = False\n",
     "DO_DECK_RECOMMENDATIONS = False\n",
-    "CHECK_DECK_RECOMMENDATIONS = True"
+    "CHECK_DECK_RECOMMENDATIONS = False"
    ]
   },
   {
@@ -99,6 +100,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if BUILD_TTV_DATASETS:\n",
+    "    assert IS_LOCAL_LAPTOP\n",
+    "\n",
     "if CHECK_FINE_TUNED_MODEL_RESULTS:\n",
     "    assert USE_FINE_TUNED_MODEL"
    ]
@@ -255,7 +259,9 @@
     "\n",
     "we will split on cards. this is actually tricky, right? it would be easy if we could just do a 95/5/5 and then there was enough pairing between 5s and other 5s to build an entire test / val set, but I actually suspect we might have a problem fielding that many extra records. oh well, I guess we'll tell in due time\n",
     "\n",
-    "since we want to stratify on so many things, and we have a 2/3s chance of any card being in the true label, I actually think fully random sampling is approporiate. we can look at the breakdown of that by other features if we need to"
+    "since we want to stratify on so many things, and we have a 2/3s chance of any card being in the true label, I actually think fully random sampling is approporiate. we can look at the breakdown of that by other features if we need to\n",
+    "\n",
+    "update: let's hold out the two most recent full sets (zendikar rising (`ZNR`) and ikoria: lair of behemoths (`IKO`)) as a \"new set generalization\" test"
    ]
   },
   {
@@ -265,8 +271,13 @@
    "outputs": [],
    "source": [
     "if BUILD_TTV_DATASETS:\n",
-    "    cards_train, cards_test_val = train_test_split(cards.index.values, test_size=.1, random_state=1337)\n",
-    "    cards_test, cards_val = train_test_split(cards_test_val, test_size=.5, random_state=1337)\n",
+    "    new_sets = ['ZNR', 'IKO']\n",
+    "    \n",
+    "    new_set = cards[cards.setname.isin(new_sets)]\n",
+    "    old_set = cards[~cards.setname.isin(new_sets)]\n",
+    "    \n",
+    "    cards_test = new_set.index.values\n",
+    "    cards_train, cards_val = train_test_split(old_set.index.values, test_size=.1, random_state=1337)\n",
     "\n",
     "    print(f\"\"\"\n",
     "train: {cards_train.shape[0]}\n",
@@ -464,6 +475,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "\n",
+    "def card_sampler_v2(cardlist, num_pairs_per_card=100, exclude_cards=None):\n",
+    "    exclude_cards = exclude_cards or set()\n",
+    "    np.random.seed(1337)\n",
+    "    \n",
+    "    allowed_edhrec_cards_df = edhrec_cards[~edhrec_cards.name.isin(exclude_cards)]\n",
+    "    allowed_non_edhrec_cards = np.array(list(all_cards.difference(exclude_cards)))\n",
+    "    \n",
+    "    # print(allowed_edhrec_cards_df.head())\n",
+    "    # print(allowed_non_edhrec_cards)\n",
+    "    \n",
+    "    for name_a in tqdm(cardlist):\n",
+    "        text_a = card_text.loc[name_a, 'text']\n",
+    "        commanders = edhrec_cards[edhrec_cards.name == name_a].commander.unique()\n",
+    "        \n",
+    "        if commanders.shape[0] > 0:\n",
+    "            commander_peers = (allowed_edhrec_cards_df\n",
+    "                               [allowed_edhrec_cards_df.commander.isin(commanders)\n",
+    "                                & (allowed_edhrec_cards_df.name != name_a)]\n",
+    "                               .name.unique())\n",
+    "            \n",
+    "            commander_non_peers = (allowed_edhrec_cards_df\n",
+    "                                   [(~allowed_edhrec_cards_df.commander.isin(commanders))\n",
+    "                                    & (allowed_edhrec_cards_df.name != name_a)]\n",
+    "                                   .name.unique())\n",
+    "            \n",
+    "            # true labels: true pairs from this card's commander peers\n",
+    "            n_true = min(num_pairs_per_card, commander_peers.shape[0])\n",
+    "            \n",
+    "            true_recs = np.random.choice(commander_peers,\n",
+    "                                         size=n_true,\n",
+    "                                         replace=False)\n",
+    "\n",
+    "            # false labels, high info: any edhrec cards that aren't commander peers\n",
+    "            n_false_high = min(num_pairs_per_card, commander_non_peers.shape[0])\n",
+    "            false_recs = np.random.choice(commander_non_peers,\n",
+    "                                          size=n_false_high,\n",
+    "                                          replace=False)\n",
+    "            \n",
+    "            # false labels, low info: any non-edhrec cards\n",
+    "            #   actually, just get these from the non-edhrec cards\n",
+    "            \n",
+    "            rec_iters = [(true_recs, True, 'edh-edh'), (false_recs, False, 'edh-not')]\n",
+    "        else:\n",
+    "            n_high = math.ceil(2 * num_pairs_per_card / 3)\n",
+    "            n_low = num_pairs_per_card - n_high\n",
+    "            \n",
+    "            # false labels, high info: any edhrec card\n",
+    "            high_recs = np.random.choice(allowed_edhrec_cards_df.name.unique(),\n",
+    "                                         size=n_high,\n",
+    "                                         replace=False)\n",
+    "            \n",
+    "            # false labels, low info: any non-edhrec cards\n",
+    "            low_recs = np.random.choice(allowed_non_edhrec_cards,\n",
+    "                                        size=n_low,\n",
+    "                                        replace=False)\n",
+    "            \n",
+    "            rec_iters = [(high_recs, False, 'not-edh'), (low_recs, False, 'not-not')]\n",
+    "        \n",
+    "        for name_b_rec_set, label, rec_set_type in rec_iters:\n",
+    "            for name_b in name_b_rec_set:\n",
+    "                try:\n",
+    "                    text_b = card_text.loc[name_b, 'text']\n",
+    "                except KeyError:\n",
+    "                    try:\n",
+    "                        text_b = card_text.loc[name_b.replace('//', '/'), 'text']\n",
+    "                    except KeyError:\n",
+    "                        pass\n",
+    "                yield (name_a, text_a, name_b, text_b, label, rec_set_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def grouper(iterable, n, fillvalue=None):\n",
     "    \"Collect data into fixed-length chunks or blocks\"\n",
     "    # grouper('ABCDEFG', 3, 'x') --> ABC DEF Gxx\"\n",
@@ -478,9 +567,13 @@
    "outputs": [],
    "source": [
     "if BUILD_TTV_DATASETS:\n",
-    "    !rm -r ./data\n",
+    "    data_dir = os.path.join('.', 'data_v2' if USE_CARD_SAMPLER_V2 else 'data')\n",
+    "    \n",
+    "    !rm -rf {data_dir}\n",
+    "    \n",
     "    for split_type in ['train', 'test', 'val']:\n",
-    "        os.makedirs(os.path.join('.', 'data', split_type), exist_ok=True)\n",
+    "        os.makedirs(os.path.join(data_dir, split_type), exist_ok=True)\n",
+    "        \n",
     "    !tree ."
    ]
   },
@@ -494,15 +587,21 @@
     "PARQUET_CHUNK_SIZE = 100_000\n",
     "\n",
     "if BUILD_TTV_DATASETS:\n",
-    "    for (split_type, cardlist, exclude_cardlist) in [['val', cards_val, None],\n",
+    "    columns = (['name_a', 'text_a', 'name_b', 'text_b', 'label', 'rec_set_type']\n",
+    "               if USE_CARD_SAMPLER_V2\n",
+    "               else ['text_a', 'text_b', 'label'])\n",
+    "    \n",
+    "    for (split_type, cardlist, exclude_cardlist) in [['val', cards_val, set(cards_test)],\n",
     "                                                     ['test', cards_test, None],\n",
     "                                                     ['train', cards_train, set(cards_val).union(cards_test)], ]:\n",
-    "        root = os.path.join('.', split_type)\n",
-    "        sampler = card_sampler(cardlist, NUM_PAIRS_PER_CARD, exclude_cardlist)\n",
+    "        \n",
+    "        cs_foo = card_sampler_v2 if USE_CARD_SAMPLER_V2 else card_sampler\n",
+    "        sampler = cs_foo(cardlist, NUM_PAIRS_PER_CARD, exclude_cardlist)\n",
+    "        \n",
     "        for (i, grp) in enumerate(tqdm(grouper(sampler, PARQUET_CHUNK_SIZE))):\n",
-    "            (pd.DataFrame(grp, columns=['text_a', 'text_b', 'label'])\n",
+    "            (pd.DataFrame(grp, columns=columns)\n",
     "             .dropna()\n",
-    "             .to_csv(os.path.join('.', 'data', split_type, f'part-{i:0>5}.csv'),\n",
+    "             .to_csv(os.path.join(data_dir, split_type, f'part-{i:0>5}.csv'),\n",
     "                     index=False,\n",
     "                     quoting=csv.QUOTE_ALL))"
    ]
@@ -563,7 +662,7 @@
     "    split_types = ['val', 'test', 'train']\n",
     "    \n",
     "    dataset = (load_dataset('csv',\n",
-    "                            data_files={split_type: glob(os.path.join('.', 'data', split_type, '*.csv'))\n",
+    "                            data_files={split_type: glob(os.path.join(data_dir, split_type, '*.csv'))\n",
     "                                        for split_type in split_types},\n",
     "                            quoting=csv.QUOTE_ALL)\n",
     "               #.map(fix_label,\n",
@@ -610,10 +709,11 @@
     "\n",
     "\n",
     "if DO_FINE_TUNING:\n",
+    "    output_dir = './results_v2' if USE_CARD_SAMPLER_V2 else None\n",
     "    model = BertForNextSentencePrediction.from_pretrained('bert-base-uncased')\n",
     "\n",
     "    training_args = TrainingArguments(\n",
-    "        output_dir='./results',                   # output directory\n",
+    "        output_dir=output_dir,                    # output directory\n",
     "        num_train_epochs=1,                       # total # of training epochs\n",
     "        per_device_train_batch_size=TRAIN_BATCH,  # batch size per device during training\n",
     "        per_device_eval_batch_size=EVAL_BATCH,    # batch size for evaluation\n",
@@ -668,10 +768,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model_name = \"edhrec-v2-bert-base-uncased\" if USE_CARD_SAMPLER_V2 else 'edhrec-bert-base-uncased'\n",
+    "\n",
     "if DO_FINE_TUNING:\n",
-    "    model_path = \"edhrec-bert-base-uncased\"\n",
-    "    model.save_pretrained(model_path)\n",
-    "    tokenizer.save_pretrained(model_path)"
+    "    model.save_pretrained(model_name)\n",
+    "    tokenizer.save_pretrained(model_name)"
    ]
   },
   {
@@ -855,9 +956,9 @@
    "source": [
     "if USE_FINE_TUNED_MODEL:\n",
     "    # loading the trained model\n",
-    "    config = BertConfig.from_pretrained('edhrec-bert-base-uncased')\n",
-    "    model = BertForNextSentencePrediction.from_pretrained('edhrec-bert-base-uncased', config=config)\n",
-    "    tokenizer = BertTokenizerFast.from_pretrained('edhrec-bert-base-uncased')"
+    "    config = BertConfig.from_pretrained(model_name)\n",
+    "    model = BertForNextSentencePrediction.from_pretrained(model_name, config=config)\n",
+    "    tokenizer = BertTokenizerFast.from_pretrained(model_name)"
    ]
   },
   {
