fine tuned model with second sampling method

--- a/bert-edh-pair-prediction/edh-pair-prediction.ipynb
+++ b/bert-edh-pair-prediction/edh-pair-prediction.ipynb
@@ -40,7 +40,9 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import pyarrow as pa\n",
     "from datasets import load_dataset, load_from_disk\n",
+    "from pyarrow.csv import ConvertOptions\n",
     "from sklearn.model_selection import train_test_split\n",
     "from tqdm.notebook import tqdm\n",
     "from transformers import (BertConfig, BertTokenizerFast,\n",
@@ -83,9 +85,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IS_LOCAL_LAPTOP = True\n",
-    "BUILD_TTV_DATASETS = True\n",
-    "USE_CARD_SAMPLER_V2 = True\n",
+    "IS_LOCAL_LAPTOP = False\n",
+    "BUILD_TTV_DATASETS = False\n",
+    "USE_CARD_SAMPLER_V2 = False\n",
     "DO_FINE_TUNING = False\n",
     "USE_FINE_TUNED_MODEL = False\n",
     "CHECK_FINE_TUNED_MODEL_RESULTS = False\n",
@@ -104,6 +106,12 @@
     "    assert IS_LOCAL_LAPTOP\n",
     "\n",
     "if CHECK_FINE_TUNED_MODEL_RESULTS:\n",
+    "    assert USE_FINE_TUNED_MODEL\n",
+    "\n",
+    "if MAKE_DECK_RECOMMENDATION_DATASETS:\n",
+    "    assert IS_LOCAL_LAPTOP\n",
+    "\n",
+    "if DO_DECK_RECOMMENDATIONS:\n",
     "    assert USE_FINE_TUNED_MODEL"
    ]
   },
@@ -566,8 +574,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_dir = os.path.join('.', 'data_v2' if USE_CARD_SAMPLER_V2 else 'data')\n",
+    "\n",
     "if BUILD_TTV_DATASETS:\n",
-    "    data_dir = os.path.join('.', 'data_v2' if USE_CARD_SAMPLER_V2 else 'data')\n",
     "    \n",
     "    !rm -rf {data_dir}\n",
     "    \n",
@@ -661,10 +670,24 @@
     "\n",
     "    split_types = ['val', 'test', 'train']\n",
     "    \n",
+    "    \n",
+    "    if USE_CARD_SAMPLER_V2:\n",
+    "        features = datasets.Features({'name_a': datasets.Value(dtype='string'),\n",
+    "                                      'text_a': datasets.Value(dtype='string'),\n",
+    "                                      'name_b': datasets.Value(dtype='string'),\n",
+    "                                      'text_b': datasets.Value(dtype='string'),\n",
+    "                                      'label': datasets.Value(dtype='int64'),\n",
+    "                                      'rec_set_type': datasets.Value(dtype='string'), })\n",
+    "    else:\n",
+    "        features = datasets.Features({'text_a': datasets.Value(dtype='string'),\n",
+    "                                      'text_b': datasets.Value(dtype='string'),\n",
+    "                                      'label': datasets.Value(dtype='bool'), })\n",
+    "    \n",
     "    dataset = (load_dataset('csv',\n",
     "                            data_files={split_type: glob(os.path.join(data_dir, split_type, '*.csv'))\n",
     "                                        for split_type in split_types},\n",
-    "                            quoting=csv.QUOTE_ALL)\n",
+    "                            quoting=csv.QUOTE_ALL,\n",
+    "                            features=features)\n",
     "               #.map(fix_label,\n",
     "               #     batched=True)\n",
     "               .shuffle(seeds={split_type: 1337\n",
@@ -679,16 +702,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.column_names if DO_FINE_TUNING else None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.shape if DO_FINE_TUNING else None"
+    "dataset if DO_FINE_TUNING else None"
    ]
   },
   {
@@ -711,6 +725,9 @@
     "if DO_FINE_TUNING:\n",
     "    output_dir = './results_v2' if USE_CARD_SAMPLER_V2 else None\n",
     "    model = BertForNextSentencePrediction.from_pretrained('bert-base-uncased')\n",
+    "    \n",
+    "    # # use this format to pick up from an aborted run\n",
+    "    # model = BertForNextSentencePrediction.from_pretrained('./results_v2/checkpoint-5750')\n",
     "\n",
     "    training_args = TrainingArguments(\n",
     "        output_dir=output_dir,                    # output directory\n",
@@ -738,14 +755,16 @@
     "        model=model,                              # the instantiated 🤗 Transformers model to be trained\n",
     "        args=training_args,                       # training arguments, defined above\n",
     "        train_dataset=dataset['train'],           # training dataset\n",
-    "        eval_dataset=dataset['val'].select(range(EVAL_BATCH * 1_000)),  # evaluation dataset\n",
+    "        eval_dataset=dataset['val']#.select(range(EVAL_BATCH * 1_000)),  # evaluation dataset\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "if DO_FINE_TUNING:\n",
@@ -758,8 +777,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if DO_FINE_TUNING:\n",
-    "    trainer.evaluate()"
+    "trainer.evaluate() if DO_FINE_TUNING else None"
    ]
   },
   {
@@ -781,8 +799,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if DO_FINE_TUNING:\n",
-    "    trainer.evaluate(dataset['val'])"
+    "# # run this if we did evaluate on only a sub-sample above\n",
+    "# trainer.evaluate(dataset['val']) if DO_FINE_TUNING else None"
    ]
   },
   {
@@ -791,8 +809,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if DO_FINE_TUNING:\n",
-    "    trainer.evaluate(dataset['test'])"
+    "trainer.evaluate(dataset['test']) if DO_FINE_TUNING else None"
    ]
   },
   {
@@ -829,9 +846,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dataset['test'][0]['label'] if DO_FINE_TUNING else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if DO_FINE_TUNING:\n",
     "    zero_max = p.predictions[:, 0].argmax()\n",
-    "    p.predictions[zero_max]"
+    "\n",
+    "p.predictions[zero_max] if DO_FINE_TUNING else None"
    ]
   },
   {
@@ -860,7 +887,8 @@
    "source": [
     "if DO_FINE_TUNING:\n",
     "    one_max = p.predictions[:, 1].argmax()\n",
-    "    p.predictions[one_max]"
+    "\n",
+    "p.predictions[one_max] if DO_FINE_TUNING else None"
    ]
   },
   {
@@ -887,15 +915,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset if DO_FINE_TUNING else None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# {k: np.array(v) for (k, v) in dataset['test'][:10].items() if k in ['attention_mask', 'input_ids', 'label', 'token_type_ids']}"
    ]
   },
@@ -908,11 +927,13 @@
     "import torch\n",
     "\n",
     "if DO_FINE_TUNING:\n",
-    "    (model(**{k: torch.as_tensor(np.array(v)).to(\"cuda\")\n",
+    "    p = (model(**{k: torch.as_tensor(np.array(v)).to(\"cuda\")\n",
     "              for (k, v) in dataset['test'][:10].items()\n",
     "              if k in ['attention_mask', 'input_ids', 'token_type_ids']})\n",
     "     [0]\n",
-    "     .softmax(1))"
+    "     .softmax(1))\n",
+    "\n",
+    "p if DO_FINE_TUNING else None"
    ]
   },
   {
@@ -993,7 +1014,7 @@
     "    split_types = ['val', 'test', 'train']\n",
     "    \n",
     "    dataset = (load_dataset('csv',\n",
-    "                            data_files={split_type: glob(os.path.join('.', 'data', split_type, '*.csv'))\n",
+    "                            data_files={split_type: glob(os.path.join(data_dir, split_type, '*.csv'))\n",
     "                                        for split_type in split_types},\n",
     "                            quoting=csv.QUOTE_ALL)\n",
     "               #.map(fix_label,\n",
@@ -1242,6 +1263,8 @@
    "source": [
     "from scipy.special import softmax\n",
     "\n",
+    "version_str = '.v2' if USE_CARD_SAMPLER_V2 else ''\n",
+    "\n",
     "if DO_DECK_RECOMMENDATIONS:\n",
     "    for deck_name in deck_names:\n",
     "        print(f\"deck_name = {deck_name}\")\n",
@@ -1263,7 +1286,7 @@
     "                .sort_values(ascending=False)\n",
     "                .reset_index())\n",
     "\n",
-    "        recs.to_parquet(f\"{deck_name}.parquet\")"
+    "        recs.to_parquet(f\"{deck_name}{version_str}.parquet\")"
    ]
   },
   {
@@ -1788,7 +1811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
