changing validation set size and label dtype

--- a/bert-edh-pair-prediction/edh-pair-prediction.ipynb
+++ b/bert-edh-pair-prediction/edh-pair-prediction.ipynb
@@ -285,7 +285,7 @@
     "    old_set = cards[~cards.setname.isin(new_sets)]\n",
     "    \n",
     "    cards_test = new_set.index.values\n",
-    "    cards_train, cards_val = train_test_split(old_set.index.values, test_size=.1, random_state=1337)\n",
+    "    cards_train, cards_val = train_test_split(old_set.index.values, test_size=.05, random_state=1337)\n",
     "\n",
     "    print(f\"\"\"\n",
     "train: {cards_train.shape[0]}\n",
@@ -526,7 +526,7 @@
     "            # false labels, low info: any non-edhrec cards\n",
     "            #   actually, just get these from the non-edhrec cards\n",
     "            \n",
-    "            rec_iters = [(true_recs, True, 'edh-edh'), (false_recs, False, 'edh-not')]\n",
+    "            rec_iters = [(true_recs, 1, 'edh-edh'), (false_recs, 0, 'edh-not')]\n",
     "        else:\n",
     "            n_high = math.ceil(2 * num_pairs_per_card / 3)\n",
     "            n_low = num_pairs_per_card - n_high\n",
@@ -541,7 +541,7 @@
     "                                        size=n_low,\n",
     "                                        replace=False)\n",
     "            \n",
-    "            rec_iters = [(high_recs, False, 'not-edh'), (low_recs, False, 'not-not')]\n",
+    "            rec_iters = [(high_recs, 0, 'not-edh'), (low_recs, 0, 'not-not')]\n",
     "        \n",
     "        for name_b_rec_set, label, rec_set_type in rec_iters:\n",
     "            for name_b in name_b_rec_set:\n",
